header align css fixing

--- a/blog/style.css
+++ b/blog/style.css
@@ -18,7 +18,7 @@ body {
 /* ------------------------------
    Header / Article Title
 ------------------------------ */
-article header {
+header {
   text-align: center;
   margin: 50px 0 30px;
 }
